--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.2",
     "style-loader": "^3.3.4",
+    "stylelint": "^16.1.0",
+    "stylelint-prettier": "^5.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
